test/fail/missing-semi.mo
func do(){};

do()
do();
do();

func f(){ 
  do();
  do()
  do()
};
